<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@+id/textviewss" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/text6" android:textAllCaps="false" android:fontFamily="@font/roboto_bold" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textStyle="normal" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/textview2" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/text5" android:textAllCaps="false" android:fontFamily="@font/roboto_regular" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center" android:id="@+id/textView3" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/text7" android:textAllCaps="false" android:fontFamily="@font/roboto_bold" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint3" app:boxStrokeColor="@color/black" app:boxStrokeWidth="2.0dip" app:boxStrokeWidthFocused="3.0dip" app:startIconTint="@color/black" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:textSize="17.0sp" android:textColor="@color/black" android:id="@+id/Ucode" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:maxLength="6" android:inputType="number" android:fontFamily="@font/roboto_light" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textStyle="normal" android:gravity="right" android:id="@id/textview4" android:padding="10.0dip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/time" android:textAllCaps="false" android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
            <Button android:layout_gravity="right" android:id="@+id/resend" android:background="@color/black" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Resend code" android:textAllCaps="false" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
            <Button android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:text="@string/button1" style="@style/Widget.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>