<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/Theme.AppCompat.Light"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip">
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/text2" android:textAllCaps="false" android:fontFamily="@font/roboto_bold" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="17.0sp" android:textStyle="normal" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@+id/textview2" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/text3" android:textAllCaps="false" android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
            <com.hbb20.CountryCodePicker android:layout_gravity="center" android:id="@+id/ccp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip" app:ccp_defaultPhoneCode="27" />
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint1" app:boxStrokeColor="@color/black" app:boxStrokeWidth="2.0dip" app:boxStrokeWidthFocused="3.0dip" app:startIconTint="@color/black" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText android:textSize="17.0sp" android:textColor="@color/black" android:id="@+id/phone" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:maxLength="17" android:inputType="phone" android:fontFamily="@font/roboto_light" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
            <TextView android:textSize="15.0sp" android:textStyle="normal" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@+id/textview4" android:padding="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/text4" android:textAllCaps="false" android:fontFamily="@font/roboto_light" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="150.0dip">
            <Button android:id="@+id/button11" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:text="@string/button1" style="@style/Widget.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>