<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dip">
        <TextView android:textSize="25.0sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/textview_rank"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/Rank"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto_bold" />
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip">
            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/black"
                android:id="@+id/text_Input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rank2"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.0dip"
                app:boxStrokeWidthFocused="3.0dip"
                app:startIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="17.0sp"
                    android:textColor="@color/black"
                    android:id="@+id/username"
                    android:padding="15.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.0dip"
                    android:maxLength="17"
                    android:inputType="text"
                    android:fontFamily="@font/roboto_light" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip">
            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rank3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.0dip"
                app:boxStrokeWidthFocused="3.0dip"
                app:startIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="17.0sp"
                    android:textColor="@color/black"
                    android:id="@+id/rank_name"
                    android:padding="15.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.0dip"
                    android:maxLength="17"
                    android:inputType="text"
                    android:fontFamily="@font/roboto_light" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip">
            <TextView
                android:textSize="13.0sp"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_gravity="center"
                android:id="@+id/eg"
                android:padding="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.0dip"
                android:text="@string/eg"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_bold" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip">

            <com.google.android.material.textfield.TextInputLayout

                android:textColorHint="@color/black"
                android:id="@+id/input_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Rank4" app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2.0dip"
                app:boxStrokeWidthFocused="3.0dip"
                app:startIconTint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textview.MaterialTextView
                    android:textSize="13.0sp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_gravity="center"
                    android:id="@+id/eg_2"
                    android:padding="10.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0.0dip"
                    android:text="@string/eg_2"
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_bold" />

                <com.google.android.material.button.MaterialButton
                    android:layout_gravity="right"
                    android:id="@id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:text="add"
                    android:textAllCaps="false"
                    app:icon="@drawable/baseline_add_black_18dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_gravity="right"
                    android:id="@+id/remove"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:text="remove"
                    android:textAllCaps="false"
                    app:icon="@drawable/sub" />
                <com.google.android.material.textfield.TextInputEditText
                    android:textSize="17.0sp"
                    android:textColor="@color/black"
                    android:id="@+id/lane"
                    android:padding="15.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.0dip"
                    android:maxLength="17"
                    android:inputType="text"
                    android:fontFamily="@font/roboto_light" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="20.0sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@id/lane_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:fontFamily="@font/roboto_regular" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip">
            <Button
                android:id="@id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50.0dip"
                android:text="@string/button1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>